Started creating login page

--- a/cmd/web/templates/login.page.gohtml
+++ b/cmd/web/templates/login.page.gohtml
@@ -23,7 +23,7 @@ Login Page
         <label for="email" class="form-label">Password</label>
         <input type="text" placeholder="Superuser3301" required="" autocomplete="login_username" class="form-control" id="login-username" name="login-username">
       </div>
-      <a id="login-button" href="javascript:void(0)" class="btn btn-primary" onclick="val()">Sign up</a>
+      <a id="login-button" href="javascript:void(0)" class="btn btn-primary" onclick="val()">Authenticate</a>
   {{end}}
 
     {{define "js"}}
