--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -36,7 +36,7 @@
 				 	<li class="nav-item">
 						<a class="nav-link" href="/login">Login</a>
 					</li>
-					<li class="nav-item">
+					<li id="login_link" class="nav-item">
 						<a class="nav-link" href="/signup">Register</a>
 					</li>
 				 </ul>
@@ -53,6 +53,50 @@
 	
 
 	{{block "js" .}}
+		<script>
+			let loginLink = document.getElementById("login_link");
+
+			document.AddEventListener("DOMContentLoaded", function() {
+				if (localStorage.getItem("token") !== null) {
+					loginLink.innerHTML == '<a class="nav-link" href="/login">Logout</a>';
+				}
+			})
+
+			function logout() {
+				localStorage.removeItem("token");
+				localStorage.removeItem("token_expiry");
+				location.href = "/login"
+			}
+
+			function checkAuth() {
+				if (localStorage.getItem("token") === null) {
+					location.href = "/login"
+					return
+				} else {
+					let token = localStorage.getItem("token");
+					const myHeaders = new Headers();
+					myHeaders.append("Content-Type", "application/json")
+					myHeaders.append("Authrozation", "Bearer " + token);
+				
+					const requestOptions = {
+						method: "POST",
+						headers: myHeaders,
+					}
+
+					fetch("{{.API}}/api/is-authenticated", requestOptions)
+						.then(response => response.json())
+						.then(function(data) {
+								if (data.error === true) {
+									{{"not logged in"}}
+									location.href = "/login"
+								} else {
+									{{"logged in"}}
+								}
+						})
+				}
+			} 
+
+		</script>
 	{{end}}
 
 </html>
