--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -44,19 +44,19 @@
 		 </div>
 		</nav>
 	</body>
+
+		<div class="container mt-5 border border-light p-3">
+			{{block "content" .}}
 	
-<div class="container mt-5 border border-light p-3">
-	{{block "content" .}}
-	
-	{{end}}
-</div>
+			{{end}}
+		</div>
 
 		<script>
 			let loginLink = document.getElementById("login_link")
 			let regLink = document.getElementById("register_link")
 
 			document.addEventListener("DOMContentLoaded", function() {
-				if (localStorage.get("token") !== null) {
+				if (localStorage.getItem("token") !== null) {
 					loginLink.innerHTML = '<a class="nav-link" onclick="logout()">Log out</a>'
 					regLink.classList.add("d-none")
 				} else {
@@ -65,44 +65,42 @@
 				loginLink.classList.remove("d-none")
 			})
 
-  	function logout() {
-  	  localStorage.removeItem("token");
-  	  localStorage.removeItem("token_expiry");
-  	  location.href = "/login";
-  	}
+  			function logout() {
+  			  localStorage.removeItem("token");
+  			  localStorage.removeItem("token_expiry");
+  			  location.href = "/login";
+  			}
 
-  	function checkAuth() {
-  	  if (localStorage.getItem("token") === null) {
-  	    location.href = "/login";
-  	    return;
-  	  } else {
-  	    let token = localStorage.getItem("token");
-  	    const myHeaders = new Headers();
-  	    myHeaders.append("Content-Type", "application/json");
-  	    myHeaders.append("Authorization", "Bearer " + token);
+  			function checkAuth() {
+  			  if (localStorage.getItem("token") === null) {
+  			    location.href = "/login";
+  			    return;
+  			  } else {
+  			    let token = localStorage.getItem("token");
+  			    const myHeaders = new Headers();
+  			    myHeaders.append("Content-Type", "application/json");
+  			    myHeaders.append("Authorization", "Bearer " + token);
 
-  	    const requestOptions = {
-  	      method: "POST",
-  	      headers: myHeaders,
-  	    }
+  			    const requestOptions = {
+  			      method: "POST",
+  			      headers: myHeaders,
+  			    }
 
-  	    fetch("{{.API}}/api/is-authenticated", requestOptions)
-  	    .then(response => response.json())
-  	    .then(function(data){
-  	      if (data.error === true) {
-    	      console.log("not logged in");
-    	      location.href = "/login";
-    	    } else {
-    	      console.log("Logged in");
-    	    }
-    	  })
-    	}
-  		}
-  
-	{{block "js" .}}	
-	
-
-	{{end}}
-
+  			    fetch("{{.API}}/api/is-authenticated", requestOptions)
+  			    .then(response => response.json())
+  			    .then(function(data){
+  			      if (data.error === true) {
+    			      console.log("not logged in");
+    			      location.href = "/login";
+    			    } else {
+    			      console.log("Logged in");
+    			    }
+    			  })
+    			}
+  			}
+ 			 </script>
+			{{block "js" .}}	
+		{{end}}
+	</body>
 </html>
 {{end}}
