--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -26,7 +26,7 @@
 	         <a class="nav-link" href="#">Features</a>
 	       </li>
 	       <li class="nav-item">
-	         <a class="nav-link" href="#">Pricing</a>
+	         <a class="nav-link" href="/donate">Donate us!</a>
 	       </li>
 	       <li class="nav-item">
 	      	   <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacts</a>
