New pages and handlers created.

--- a/cmd/web/templates/base.layout.gohtml
+++ b/cmd/web/templates/base.layout.gohtml
@@ -1,106 +1,118 @@
 {{define "base"}}
 <!DOCTYPE HTML>
 <html>
-    <head>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+		{{block "style" .}}
+
+		{{end}}
+		
+		<link rel="stylesheet" href="button.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    	<title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+		<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>	
+			
+		<title>
 				{{block "title" .}}
 
     		{{end}}
-			</title>
-    </head>
-	<body>
-		{{/* Navbar */}}
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	 <div class="container-fluid">
-	   <a class="navbar-brand" href="/">Home</a>
-	   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	     <span class="navbar-toggler-icon"></span>
-	   </button>
-	   <div class="collapse navbar-collapse" id="navbarNav">
-	     <ul class="navbar-nav">
-	       <li class="nav-item">
-	         <a class="nav-link active" aria-current="page" href="/home">Products</a>
-	       </li>
-	       <li class="nav-item">
-	         <a class="nav-link" href="#">Features</a>
-	       </li>
-	       <li class="nav-item">
-	         <a class="nav-link" href="/donate">Donate us!</a>
-	       </li>
-	       <li class="nav-item">
-	      	   <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacts</a>
-	      	 </li>
-	    	 </ul>
-				 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-				 	<li id="login_link" class="nav-item">
-						<a class="nav-link" href="/login">Login</a>
-					</li>
-					<li id="register_link" class="nav-item">
-						<a class="nav-link" href="/signup">Register</a>
-					</li>
-				 </ul>
-	  	 </div>
-		 </div>
-		</nav>
-	</body>
+	  </title>
+  </head>
+		<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		 <div class="container-fluid">
+		   <a class="navbar-brand" href="/">Home</a>
+		   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		     <span class="navbar-toggler-icon"></span>
+		   </button>
+		   <div class="collapse navbar-collapse" id="navbarNav">
+		     <ul class="navbar-nav">
+		       <li class="nav-item">
+		         <a class="nav-link active" aria-current="page" href="/home">Products</a>
+		       </li>
+		       <li class="nav-item">
+		         <a class="nav-link" href="#">Features</a>
+		       </li>
+		       <li class="nav-item">
+		         <a class="nav-link" href="/donate">Donate us!</a>
+		       </li>
+		       <li class="nav-item">
+		      	   <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacts</a>
+		      	 </li>
+		    	 </ul>
+					 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					 	<li id="login_link" class="nav-item">
+							<a class="nav-link" href="/login">Login</a>
+						</li>
+						<li id="register_link" class="nav-item">
+							<a class="nav-link" href="/signup">Register</a>
+						</li>
+					 </ul>
+		  	 </div>
+			 </div>
+			</nav>
+		</body>
 
-		<div class="container mt-5 border border-light p-3">
-			{{block "content" .}}
-	
+			<div class="container mt-5 border border-light p-3">
+				{{block "content" .}}
+
+				{{end}}
+			</div>
+
+			<script>
+				let loginLink = document.getElementById("login_link")
+				let regLink = document.getElementById("register_link")
+
+				document.addEventListener("DOMContentLoaded", function() {
+					if (localStorage.getItem("token") !== null) {
+						loginLink.innerHTML = '<a class="nav-link" onclick="logout()">Log out</a>'
+						regLink.classList.add("d-none")
+					} else {
+						loginLink.innerHTML = '<a class="nav-link" href="/login">Login</a>'
+					}
+					loginLink.classList.remove("d-none")
+				})
+
+  				function logout() {
+  				  localStorage.removeItem("token");
+  				  localStorage.removeItem("token_expiry");
+  				  location.href = "/login";
+  				}
+
+  				function checkAuth() {
+  				  if (localStorage.getItem("token") === null) {
+  				    location.href = "/login";
+  				    return;
+  				  } else {
+  				    let token = localStorage.getItem("token");
+  				    const myHeaders = new Headers();
+  				    myHeaders.append("Content-Type", "application/json");
+  				    myHeaders.append("Authorization", "Bearer " + token);
+
+  				    const requestOptions = {
+  				      method: "POST",
+  				      headers: myHeaders,
+  				    }
+
+  				    fetch("{{.API}}/api/is-authenticated", requestOptions)
+  				    .then(response => response.json())
+  				    .then(function(data){
+  				      if (data.error === true) {
+    				      console.log("not logged in");
+    				      location.href = "/login";
+    				    } else {
+    				      console.log("Logged in");
+    				    }
+    				  })
+    				}
+  				}
+ 				 </script>
+				{{block "js" .}}	
 			{{end}}
-		</div>
-
-		<script>
-			let loginLink = document.getElementById("login_link")
-			let regLink = document.getElementById("register_link")
-
-			document.addEventListener("DOMContentLoaded", function() {
-				if (localStorage.getItem("token") !== null) {
-					loginLink.innerHTML = '<a class="nav-link" onclick="logout()">Log out</a>'
-					regLink.classList.add("d-none")
-				} else {
-					loginLink.innerHTML = '<a class="nav-link" href="/login">Login</a>'
-				}
-				loginLink.classList.remove("d-none")
-			})
-
-  			function logout() {
-  			  localStorage.removeItem("token");
-  			  localStorage.removeItem("token_expiry");
-  			  location.href = "/login";
-  			}
-
-  			function checkAuth() {
-  			  if (localStorage.getItem("token") === null) {
-  			    location.href = "/login";
-  			    return;
-  			  } else {
-  			    let token = localStorage.getItem("token");
-  			    const myHeaders = new Headers();
-  			    myHeaders.append("Content-Type", "application/json");
-  			    myHeaders.append("Authorization", "Bearer " + token);
-
-  			    const requestOptions = {
-  			      method: "POST",
-  			      headers: myHeaders,
-  			    }
-
-  			    fetch("{{.API}}/api/is-authenticated", requestOptions)
-  			    .then(response => response.json())
-  			    .then(function(data){
-  			      if (data.error === true) {
-    			      console.log("not logged in");
-    			      location.href = "/login";
-    			    } else {
-    			      console.log("Logged in");
-    			    }
-    			  })
-    			}
-  			}
- 			 </script>
-			{{block "js" .}}	
-		{{end}}
 	</body>
 </html>
 {{end}}
