--- a/cmd/web/templates/donate.page.gohtml
+++ b/cmd/web/templates/donate.page.gohtml
@@ -26,7 +26,7 @@
 		}   
 
 		.my-button:hover {
-				color: black;
+			color: linear-gradient(#03a9f4, #ffeb3b, #f441a5, #03a9f4);
 		    animation: animate 8s linear infinite;
 		}
 
