--- a/cmd/web/templates/login.page.gohtml
+++ b/cmd/web/templates/login.page.gohtml
@@ -35,7 +35,7 @@ Login Page
 
         {{define "js"}}
         <script> 
-				const loginMessages = document.getElementById("login-messages")   
+		const loginMessages = document.getElementById("login-messages")   
         function showLoginError(msg) {
             loginMessages.classList.add("alert-danger");
             loginMessages.classList.remove("alert-success");
@@ -51,42 +51,43 @@ Login Page
         }
 
       function val() {
-     let form = document.getElementById("login_form");
-     if (form.checkValidity() === false) {
-         this.event.preventDefault();
-         this.event.stopPropagation();
-         form.classList.add("was-validated");
-         return;
-     }
-     form.classList.add("was-validated");
-
-     let payload = {
-         email: document.getElementById("email").value,
-         password: document.getElementById("password").value,
-     }
-
-     const requestOptions = {
-         method: 'post',
-         headers: {
-             'Accept': 'application/json',
-             'Content-Type': 'application/json'
-         },
-         body: JSON.stringify(payload),
-     }
-
-        fetch("{{.API}}/api/authenticate", requestOptions)
-        .then(response => response.json())
-        .then(data => {
-            console.log(data);
-            if (data.error === false) {
-                localStorage.setItem('token', data.authentication_token.token);
-                localStorage.setItem('token_expiry', data.authentication_token.expiry);
-                showSuccess();
-                location.href = "/";
-            } else {
-                showError(data.message);
+            let form = document.getElementById("login_form");
+            if (form.checkValidity() === false) {
+                this.event.preventDefault();
+                this.event.stopPropagation();
+                form.classList.add("was-validated");
+                return;
             }
-        })
-    }
+            form.classList.add("was-validated");
+
+            let payload = {
+                email: document.getElementById("login_username").value,
+                password: document.getElementById("login_password").value,
+            }
+
+            
+            const requestOptions = {
+                method: 'post',
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(payload),
+            }
+
+            fetch("{{.API}}/api/authenticate", requestOptions)
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                if (data.error === false) {
+                    localStorage.setItem('token', data.authentication_token.token);
+                    localStorage.setItem('token_expiry', data.authentication_token.expiry);
+                    showLoginSuccess();
+                    location.href = "/";
+                } else {
+                    showLoginError(data.message);
+                }
+            })
+}       
     </script>
 {{end}}
