--- a/cmd/web/templates/receipt.page.gohtml
+++ b/cmd/web/templates/receipt.page.gohtml
@@ -5,10 +5,15 @@ Registration succeeded!
 {{end}}
 
 {{define "content"}}
-    {{/* {{$user := index .Data "userData" }} */}}
-    <h2 class="mt-3">Registration succeeded </h2>
-    <hr>
-    {{/* {{ range $i, $v := .Data "userData"}} */}}
-    {{/* <h2 class="mt-3">Your data </h2> */}}
-    {{/* <p>{{$i}}: {{$v}}</p> */}}
+        {{range $i, $v := .Data "user" }}
+        <div class="row col-md-4 offset-md-2">
+
+		<div class="mt-3 p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+		<img src="https://th.bing.com/th/id/R.06a5be0241518d58370d5841367e607c?rik=ktfKqnBdFpEHqw&pid=ImgRaw&r=0"  class="image-fluid rounded mx-auto d-block" alt="eth" width="200px" height="125px">
+ 		 	<div class="card-body">
+ 		   	<h5 class="card-title">{{$i}}: {{"  "}} {{$v}}</h5>
+ 		  </div>
+ 		</div>
+    </div>
+
 {{end}}
