--- a/cmd/web/templates/donate.page.gohtml
+++ b/cmd/web/templates/donate.page.gohtml
@@ -76,8 +76,9 @@ Donations!
  		   	<p class="card-text">Payment with crypto has some prevelegies, such as: </p>
  		   	<p class="card-text">Faster executing </p>
  		   	<p class="card-text">Less commission </p>
- 		  	<a href="/charge-credit-card" class="my-button">I want to donate in crypto!</a>
- 		  </div>
+ 		  	<a href="/home" class="my-button">I want to donate in crypto!</a>
+	   		  {{/* Home.. For now */}}
+ 		  </div> 
  		</div>
  	</div>
 
@@ -89,7 +90,7 @@ Donations!
  		    	<p class="card-text">Quick, and without any doubts</p>
  		    	<p class="card-text">Visa, MasterCard..</p>
  		    	<p class="card-text">As you prefer :3</p>
- 		    	<a href="/exec-crypto-tx" class="my-button">I want to donate with credit card!</a>
+ 		    	<a href="/charge-credit-card" class="my-button">I want to donate with credit card!</a>
 	 			</div>
 			</div>
 		</div>
