--- a/cmd/web/templates/login.page.gohtml
+++ b/cmd/web/templates/login.page.gohtml
@@ -19,7 +19,7 @@ Login Page
         novalidate="">
         
       <div class="col-md-6">
-        <label for="email" class="form-label">Login username: </label>
+        <label for="email" class="form-label">Enter username or email: </label>
         <input type="text" placeholder="Username, or Email" required="" autocomplete="login_username" class="form-control" id="login_username" name="login_username">
       </div>
 
